--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,10 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.9)
+project(async)
 
-project(async VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 set(CMAKE_CXX_STANDARD 14)
-find_package(Threads)
 
-add_executable(async async.cpp)
-add_library(bulkmt_async bulkmt_async.cpp)
+add_library(async SHARED async.cpp async.h)
 
-set_target_properties(async PROPERTIES
-	CXX_STANDARD 14
-	CXX_STANDARD_REQUIRED ON
-	COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
-)
+add_executable(async_cli main.cpp)
 
-target_link_libraries(async
-	${CMAKE_THREAD_LIBS_INIT}
-	bulkmt_async
-)
-
-
-install(TARGETS async RUNTIME DESTINATION bin)
-
-set(CPACK_GENERATOR DEB)
-
-set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
-
-set(CPACK_PACKAGE_CONTACT albkharisov@gmail.com)
-set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-
-include(CPack)
-
+target_link_libraries(async_cli async)
