--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
 script:
 - cmake --version
 - cmake .
-- cmake --build .
+- cmake --build . -- VERBOSE=1
 - cmake --build . --target package
 deploy:
   provider: script
