add target_properties, standard is required

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,14 @@ find_package(Threads)
 
 add_library(async SHARED async.cpp async.h)
 add_executable(async_cli main.cpp)
+
+set_target_properties(async_cli PROPERTIES
+    CXX_STANDARD 14
+    CXX_STANDARD_REQUIRED ON
+    COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
+    # COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra;-fsanitize=thread"
+)
+
 target_link_libraries(async_cli
 	async
 	${CMAKE_THREAD_LIBS_INIT}
