--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ language: cpp
 compiler: gcc
 
 before_script:
-- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-- sudo apt update
-- sudo apt -y install gcc-7 g++-7 libboost-test-dev doxygen graphviz
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
-- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
+        #- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        #- sudo apt update
+        #- sudo apt -y install gcc-7 g++-7 libboost-test-dev doxygen graphviz
+        #- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
+        #- sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
 #before_script:
-#- sudo apt update
-#- sudo apt install libboost-test-dev -y
-#- echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list.d/xenial.list
-#- sudo apt update
-#- sudo apt install libspdlog-dev -y
+- sudo apt update
+- sudo apt install libboost-test-dev -y
+- echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list.d/xenial.list
+- sudo apt update
+- sudo apt install libspdlog-dev -y
 script:
 - cmake --version
 - cmake .
@@ -23,4 +23,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T libasync.so-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ualbkharisov:$BINTRAY_API_KEY "https://api.bintray.com/content/albkharisov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/libasync.so-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T libasync.so -ualbkharisov:$BINTRAY_API_KEY "https://api.bintray.com/content/albkharisov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/libasync.so"
