add deb packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,17 +27,17 @@ include(GNUInstallDirs)
 install(TARGETS async 
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCVLUDEDIR})
-install(FILES ${CMAKE_BINARY_DIR}/async.pc
-	DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
+#install(FILES ${CMAKE_BINARY_DIR}/async.pc
+#	DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
 
-#set(CPACK_GENERATOR DEB)
-#
-#set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-#set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
-#set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
-#
-#set(CPACK_PACKAGE_CONTACT albkharisov@gmail.com)
-#set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
-#
-#include(CPack)
+set(CPACK_GENERATOR DEB)
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT albkharisov@gmail.com)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+
+include(CPack)
 
