--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T libasync.so -ualbkharisov:$BINTRAY_API_KEY "https://api.bintray.com/content/albkharisov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/libasync.so"
+  - curl -T async-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ualbkharisov:$BINTRAY_API_KEY "https://api.bintray.com/content/albkharisov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/async-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
